--- a/gabriel28.html
+++ b/gabriel28.html
@@ -3,61 +3,106 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Gabriel Mauricio Rodríguez Peña, estudiante de Ingeniería Industrial en la Universidad Católica San Pablo. Cursos que está cursando: Matemática 1, Química 1, Metodología de la Investigación Científica, Economía General, Introducción a la Filosofía y Introducción a la Ciencia de la Computación.">
-    <meta name="keywords" content="Gabriel Mauricio Rodríguez Peña, Ingeniería Industrial, Universidad Católica San Pablo, cursos, Matemática, Química, Metodología de la Investigación Científica, Economía General, Filosofía, Ciencia de la Computación, Yadhira Yurikho Coyuri Tirado">
-    <meta name="author" content="Gabriel Mauricio Rodríguez Peña">
-    <meta property="og:title" content="Gabriel Mauricio Rodríguez Peña - Estudiante de Ingeniería Industrial">
-    <meta property="og:description" content="Página web de Gabriel Mauricio Rodríguez Peña, estudiante de Ingeniería Industrial en la Universidad Católica San Pablo, y los cursos que está cursando actualmente.">
-    <meta property="og:image" content="ruta/a/imagen.jpg"> <!-- Cambia esta ruta a una imagen relevante -->
-    <meta property="og:url" content="https://www.tusitioweb.com">
-    <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Gabriel Mauricio Rodríguez Peña - Estudiante de Ingeniería Industrial">
-    <meta name="twitter:description" content="Página web de Gabriel Mauricio Rodríguez Peña, estudiante de Ingeniería Industrial en la Universidad Católica San Pablo.">
-    <meta name="twitter:image" content="ruta/a/imagen.jpg"> <!-- Cambia esta ruta a una imagen relevante -->
-
-    <title>Gabriel Mauricio Rodríguez Peña - Estudiante de Ingeniería Industrial</title>
-
-    <!-- Si tienes un archivo CSS, de lo contrario, puedes omitir esta línea -->
-    <link rel="stylesheet" href="styles.css"> 
+    <title>Gabriel Mauricio Rodríguez Peña</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #e8f5e9; /* Verde claro de fondo */
+            color: #2e7d32; /* Verde oscuro para el texto */
+            margin: 0;
+            padding: 0;
+        }
+        header {
+            background-color: #388e3c; /* Verde intenso */
+            color: white;
+            padding: 20px;
+            text-align: center;
+        }
+        nav {
+            text-align: center;
+            margin: 10px 0;
+        }
+        nav a {
+            margin: 0 15px;
+            color: #2e7d32; /* Verde oscuro */
+            text-decoration: none;
+            font-weight: bold;
+        }
+        nav a:hover {
+            text-decoration: underline;
+        }
+        section {
+            margin: 20px;
+            padding: 20px;
+            background-color: #ffffff; /* Blanco para contraste */
+            border-radius: 8px;
+            box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
+        }
+        h2 {
+            color: #388e3c; /* Verde intenso */
+            margin-bottom: 10px;
+        }
+        ul {
+            list-style-type: none;
+            padding: 0;
+        }
+        li {
+            margin: 10px 0;
+        }
+        a {
+            color: #2e7d32; /* Verde oscuro */
+            text-decoration: none;
+        }
+        a:hover {
+            text-decoration: underline;
+        }
+        footer {
+            text-align: center;
+            background-color: #388e3c; /* Verde intenso */
+            color: white;
+            padding: 10px 0;
+            margin-top: 20px;
+        }
+    </style>
 </head>
 <body>
     <header>
         <h1>Gabriel Mauricio Rodríguez Peña</h1>
         <nav>
-            <ul>
-                <li><a href="#biografia">Biografía</a></li>
-                <li><a href="#estudios">Estudios y Cursos</a></li>
-                <li><a href="#contacto">Contacto</a></li>
-            </ul>
+            <a href="#biografia">Biografía</a>
+            <a href="#estudios">Estudios y Cursos</a>
+            <a href="#contacto">Contacto</a>
         </nav>
     </header>
-
     <section id="biografia">
         <h2>Biografía</h2>
-        <p>Soy Gabriel Mauricio Rodríguez Peña, estudiante de Ingeniería Industrial en la <strong>Universidad Católica San Pablo</strong> (UCSP) de Arequipa, Perú. Estoy actualmente cursando mis estudios de Ingeniería Industrial junto a mis compañeros <strong>Yadhira Yurikho Coyuri Tirado</strong> y otros amigos como <strong>Fabricio Bernardo Villanueva Valdivia</strong>.</p>
+        <p>Soy Gabriel Mauricio Rodríguez Peña, estudiante de Ingeniería Industrial en la <strong>Universidad Católica San Pablo</strong> (UCSP) de Arequipa, Perú.</p>
+        <p>Estoy actualmente cursando mis estudios junto a mis compañeros <strong>Yadhira Yurikho Coyuri Tirado</strong> y otros amigos como <strong>Fabricio Bernardo Villanueva Valdivia</strong> y <strong>Jonathan Boris Tunquipa Ticuña</strong>.</p>
+        <p>Me gustan las matemáticas y jugar videojuegos en mi tiempo libre.</p>
     </section>
-
     <section id="estudios">
         <h2>Estudios y Cursos</h2>
         <p>Actualmente, estoy cursando los siguientes cursos en mi carrera de Ingeniería Industrial:</p>
         <ul>
-            <li><strong>Matemática 1</strong>: Fundamentos matemáticos necesarios para el análisis en ingeniería.</li>
-            <li><strong>Química 1</strong>: Introducción a los principios químicos aplicados a la ingeniería.</li>
-            <li><strong>Metodología de la Investigación Científica</strong>: Métodos y técnicas de investigación científica en ingeniería.</li>
-            <li><strong>Economía General</strong>: Principios económicos y su aplicación en la industria y los negocios.</li>
-            <li><strong>Introducción a la Filosofía</strong>: Reflexión crítica sobre los principios y problemas fundamentales de la filosofía.</li>
-            <li><strong>Introducción a la Ciencia de la Computación</strong>: Conceptos básicos y fundamentos de la programación y la computación.</li>
+            <li><strong>Matemática 1:</strong> Fundamentos matemáticos necesarios para el análisis en ingeniería.</li>
+            <li><strong>Química 1:</strong> Introducción a los principios químicos aplicados a la ingeniería.</li>
+            <li><strong>Metodología de la Investigación Científica:</strong> Métodos y técnicas de investigación científica en ingeniería.</li>
+            <li><strong>Economía General:</strong> Principios económicos y su aplicación en la industria y los negocios.</li>
+            <li><strong>Introducción a la Filosofía:</strong> Reflexión crítica sobre los conceptos y problemas fundamentales de la filosofía.</li>
+            <li><strong>Introducción a la Ciencia de la Computación:</strong> Conceptos básicos y fundamentos de la programación y la computación.</li>
         </ul>
-        <p>Además de mis estudios, colaboro y comparto experiencias con mis compañeros como <strong>Yadhira Yurikho Coyuri Tirado</strong>, quien también estudia en la misma universidad. Puedes visitar su página web personal en este enlace:</p>
-        <p><a href="https://yadhirayurikhocoyuritirado.github.io/yadhirayurikhocoyuri/" target="_blank">Página de Yadhira Yurikho Coyuri Tirado</a></p>
+        <p>Además de mis estudios, colaboro y comparto experiencias con mis compañeros.</p>
+        <ul>
+            <li><a href="https://fabriciobernardovillanueva.github.io/githubpagetest/" target="_blank">Fabricio Bernardo Villanueva Valdivia</a></li>
+            <li><a href="https://jonathanboristunquipaticuna.github.io/JonathanBorisTunquipaTicu-a/" target="_blank">Jonathan Boris Tunquipa Ticuña</a></li>
+            <li><a href="https://gabrielmaurodriguez.github.io/gabrielmauriciorodriguezpe-a.github.io/" target="_blank">Página de Yadhira Yurikho Coyuri Tirado</a></li>
+        </ul>
     </section>
-
     <section id="contacto">
         <h2>Contacto</h2>
         <p>Puedes ponerte en contacto conmigo a través del siguiente correo electrónico:</p>
         <p>Email: <a href="mailto:gabriel.rodriguez.pena@ucsp.edu.pe">gabriel.rodriguez.pena@ucsp.edu.pe</a></p>
     </section>
-
     <footer>
         <p>&copy; 2024 Gabriel Mauricio Rodríguez Peña</p>
     </footer>
