--- a/gabriel28.html
+++ b/gabriel28.html
@@ -8,7 +8,7 @@
         body {
             font-family: Arial, sans-serif;
             background-color: #e8f5e9; /* Verde claro de fondo */
-            color: #2e7d32; /* Verde oscuro para el texto */
+            color: #2e7d32; /* Verde oscuro para el texto general */
             margin: 0;
             padding: 0;
         }
@@ -39,7 +39,7 @@
             box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
         }
         h2 {
-            color: #388e3c; /* Verde intenso */
+            color: black; /* Color negro para los títulos */
             margin-bottom: 10px;
         }
         ul {
