--- a/index.html
+++ b/index.html
@@ -5,63 +5,107 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gabriel Mauricio Rodríguez Peña</title>
     <style>
+        /* General */
         body {
-            font-family: Arial, sans-serif;
-            background-color: #e8f5e9; /* Verde claro de fondo */
-            color: #2e7d32; /* Verde oscuro para el texto general */
+            font-family: 'Arial', sans-serif;
             margin: 0;
             padding: 0;
+            background-color: #f4f9f4; /* Fondo verde claro suave */
+            color: #2e7d32; /* Verde oscuro para texto */
         }
+
+        /* Header */
         header {
-            background-color: #388e3c; /* Verde intenso */
+            background-color: #388e3c; /* Verde fuerte */
             color: white;
-            padding: 20px;
+            padding: 20px 10px;
             text-align: center;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
         }
+
+        header h1 {
+            font-size: 2.5em;
+            margin: 0;
+        }
+
         nav {
-            text-align: center;
-            margin: 10px 0;
+            margin-top: 10px;
         }
+
         nav a {
-            margin: 0 15px;
-            color: #2e7d32; /* Verde oscuro */
+            color: #c8e6c9; /* Verde pastel */
             text-decoration: none;
-            font-weight: bold;
+            margin: 0 15px;
+            font-size: 1.2em;
+            transition: color 0.3s;
         }
+
         nav a:hover {
-            text-decoration: underline;
+            color: #ffffff; /* Blanco al pasar el mouse */
         }
+
+        /* Sección principal */
         section {
-            margin: 20px;
+            max-width: 900px;
+            margin: 30px auto;
             padding: 20px;
-            background-color: #ffffff; /* Blanco para contraste */
-            border-radius: 8px;
-            box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
+            background-color: #ffffff; /* Fondo blanco */
+            border-radius: 10px;
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
         }
-        h2 {
-            color: black; /* Color negro para los títulos */
-            margin-bottom: 10px;
+
+        section h2 {
+            color: #1b5e20; /* Verde más oscuro */
+            border-bottom: 2px solid #c8e6c9;
+            padding-bottom: 5px;
+            margin-bottom: 15px;
+            font-size: 1.8em;
         }
+
+        section p, section ul {
+            font-size: 1.1em;
+            line-height: 1.6em;
+        }
+
         ul {
             list-style-type: none;
             padding: 0;
         }
-        li {
+
+        ul li {
             margin: 10px 0;
         }
-        a {
-            color: #2e7d32; /* Verde oscuro */
-            text-decoration: none;
+
+        ul li strong {
+            color: #1b5e20; /* Verde fuerte para títulos */
         }
-        a:hover {
+
+        ul li a {
+            color: #388e3c; /* Verde medio */
+            text-decoration: none;
+            font-weight: bold;
+        }
+
+        ul li a:hover {
             text-decoration: underline;
         }
+
+        /* Footer */
         footer {
-            text-align: center;
-            background-color: #388e3c; /* Verde intenso */
+            background-color: #388e3c;
             color: white;
+            text-align: center;
             padding: 10px 0;
-            margin-top: 20px;
+            margin-top: 30px;
+        }
+
+        footer a {
+            color: #c8e6c9;
+            text-decoration: none;
+        }
+
+        footer a:hover {
+            color: #ffffff;
         }
     </style>
 </head>
@@ -74,35 +118,39 @@
             <a href="#contacto">Contacto</a>
         </nav>
     </header>
+
     <section id="biografia">
         <h2>Biografía</h2>
         <p>Soy Gabriel Mauricio Rodríguez Peña, estudiante de Ingeniería Industrial en la <strong>Universidad Católica San Pablo</strong> (UCSP) de Arequipa, Perú.</p>
-        <p>Estoy actualmente cursando mis estudios junto a mis compañeros <strong>Yadhira Yurikho Coyuri Tirado</strong> y otros amigos como <strong>Fabricio Bernardo Villanueva Valdivia</strong> y <strong>Jonathan Boris Tunquipa Ticuña</strong>.</p>
-        <p>Me gustan las matemáticas y jugar videojuegos en mi tiempo libre.</p>
+        <p>Me acompañan en este camino mis amigos <strong>Fabricio Bernardo Villanueva Valdivia</strong>, <strong>Jonathan Boris Tunquipa Ticuña</strong> y <strong>Yadhira Yurikho Coyuri Tirado</strong>.</p>
+        <p>Me apasionan las matemáticas y disfruto jugar videojuegos en mi tiempo libre.</p>
     </section>
+
     <section id="estudios">
         <h2>Estudios y Cursos</h2>
-        <p>Actualmente, estoy cursando los siguientes cursos en mi carrera de Ingeniería Industrial:</p>
+        <p>Actualmente, estoy cursando los siguientes cursos:</p>
         <ul>
             <li><strong>Matemática 1:</strong> Fundamentos matemáticos necesarios para el análisis en ingeniería.</li>
             <li><strong>Química 1:</strong> Introducción a los principios químicos aplicados a la ingeniería.</li>
-            <li><strong>Metodología de la Investigación Científica:</strong> Métodos y técnicas de investigación científica en ingeniería.</li>
-            <li><strong>Economía General:</strong> Principios económicos y su aplicación en la industria y los negocios.</li>
-            <li><strong>Introducción a la Filosofía:</strong> Reflexión crítica sobre los conceptos y problemas fundamentales de la filosofía.</li>
-            <li><strong>Introducción a la Ciencia de la Computación:</strong> Conceptos básicos y fundamentos de la programación y la computación.</li>
+            <li><strong>Metodología de la Investigación Científica:</strong> Métodos y técnicas de investigación en ingeniería.</li>
+            <li><strong>Economía General:</strong> Principios económicos y su aplicación en la industria.</li>
+            <li><strong>Introducción a la Filosofía:</strong> Reflexión crítica sobre conceptos fundamentales de la filosofía.</li>
+            <li><strong>Introducción a la Ciencia de la Computación:</strong> Conceptos básicos y fundamentos de programación.</li>
         </ul>
-        <p>Además de mis estudios, colaboro y comparto experiencias con mis compañeros.</p>
+        <p>También colaboro y comparto experiencias con mis compañeros:</p>
         <ul>
             <li><a href="https://fabriciobernardovillanueva.github.io/githubpagetest/" target="_blank">Fabricio Bernardo Villanueva Valdivia</a></li>
             <li><a href="https://jonathanboristunquipaticuna.github.io/JonathanBorisTunquipaTicu-a/" target="_blank">Jonathan Boris Tunquipa Ticuña</a></li>
-            <li><a href="https://gabrielmaurodriguez.github.io/gabrielmauriciorodriguezpe-a.github.io/" target="_blank">Página de Yadhira Yurikho Coyuri Tirado</a></li>
+            <li><a href="https://gabrielmaurodriguez.github.io/gabrielmauriciorodriguezpe-a.github.io/" target="_blank">Yadhira Yurikho Coyuri Tirado</a></li>
         </ul>
     </section>
+
     <section id="contacto">
         <h2>Contacto</h2>
-        <p>Puedes ponerte en contacto conmigo a través del siguiente correo electrónico:</p>
+        <p>Si deseas ponerte en contacto conmigo, no dudes en escribirme:</p>
         <p>Email: <a href="mailto:gabriel.rodriguez.pena@ucsp.edu.pe">gabriel.rodriguez.pena@ucsp.edu.pe</a></p>
     </section>
+
     <footer>
         <p>&copy; 2024 Gabriel Mauricio Rodríguez Peña</p>
     </footer>
