--- a/gabriel28.html
+++ b/gabriel28.html
@@ -6,26 +6,30 @@
     <title>Gabriel Mauricio Rodríguez Peña</title>
     <style>
         /* General */
-        body {
-            font-family: 'Arial', sans-serif;
+        * {
             margin: 0;
             padding: 0;
-            background-color: #f4f9f4; /* Fondo verde claro suave */
-            color: #2e7d32; /* Verde oscuro para texto */
+            box-sizing: border-box;
+        }
+
+        body {
+            font-family: 'Arial', sans-serif;
+            background-color: #e8f5e9; /* Verde claro */
+            color: #2e7d32; /* Verde oscuro */
+            line-height: 1.6;
         }
 
         /* Header */
         header {
-            background-color: #388e3c; /* Verde fuerte */
-            color: white;
-            padding: 20px 10px;
+            background-color: #2e7d32; /* Verde intenso */
+            color: #fff;
             text-align: center;
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+            padding: 20px 0;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
         }
 
         header h1 {
-            font-size: 2.5em;
-            margin: 0;
+            font-size: 2.5rem;
         }
 
         nav {
@@ -36,39 +40,46 @@
             color: #c8e6c9; /* Verde pastel */
             text-decoration: none;
             margin: 0 15px;
-            font-size: 1.2em;
+            font-size: 1.1rem;
             transition: color 0.3s;
         }
 
         nav a:hover {
-            color: #ffffff; /* Blanco al pasar el mouse */
+            color: #ffffff;
         }
 
-        /* Sección principal */
-        section {
-            max-width: 900px;
-            margin: 30px auto;
+        /* Main Section */
+        main {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
             padding: 20px;
-            background-color: #ffffff; /* Fondo blanco */
+        }
+
+        section {
+            background-color: #fff;
+            width: 90%;
+            max-width: 800px;
+            margin: 20px 0;
+            padding: 20px;
             border-radius: 10px;
-            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
         }
 
         section h2 {
-            color: #1b5e20; /* Verde más oscuro */
+            color: #1b5e20; /* Verde oscuro */
             border-bottom: 2px solid #c8e6c9;
-            padding-bottom: 5px;
-            margin-bottom: 15px;
-            font-size: 1.8em;
+            padding-bottom: 10px;
+            margin-bottom: 20px;
+            font-size: 1.8rem;
         }
 
         section p, section ul {
-            font-size: 1.1em;
-            line-height: 1.6em;
+            font-size: 1rem;
         }
 
         ul {
-            list-style-type: none;
+            list-style: none;
             padding: 0;
         }
 
@@ -77,11 +88,11 @@
         }
 
         ul li strong {
-            color: #1b5e20; /* Verde fuerte para títulos */
+            color: #1b5e20;
         }
 
         ul li a {
-            color: #388e3c; /* Verde medio */
+            color: #388e3c;
             text-decoration: none;
             font-weight: bold;
         }
@@ -92,11 +103,12 @@
 
         /* Footer */
         footer {
-            background-color: #388e3c;
+            background-color: #2e7d32;
             color: white;
             text-align: center;
-            padding: 10px 0;
+            padding: 15px 0;
             margin-top: 30px;
+            font-size: 0.9rem;
         }
 
         footer a {
@@ -106,6 +118,18 @@
 
         footer a:hover {
             color: #ffffff;
+        }
+
+        /* Responsive */
+        @media (min-width: 768px) {
+            nav a {
+                font-size: 1.2rem;
+            }
+
+            section {
+                margin: 30px 0;
+                padding: 30px;
+            }
         }
     </style>
 </head>
@@ -119,37 +143,42 @@
         </nav>
     </header>
 
-    <section id="biografia">
-        <h2>Biografía</h2>
-        <p>Soy Gabriel Mauricio Rodríguez Peña, estudiante de Ingeniería Industrial en la <strong>Universidad Católica San Pablo</strong> (UCSP) de Arequipa, Perú.</p>
-        <p>Me acompañan en este camino mis amigos <strong>Fabricio Bernardo Villanueva Valdivia</strong>, <strong>Jonathan Boris Tunquipa Ticuña</strong> y <strong>Yadhira Yurikho Coyuri Tirado</strong>.</p>
-        <p>Me apasionan las matemáticas y disfruto jugar videojuegos en mi tiempo libre.</p>
-    </section>
+    <main>
+        <section id="biografia">
+            <h2>Biografía</h2>
+            <p>Soy Gabriel Mauricio Rodríguez Peña, estudiante de Ingeniería Industrial en la <strong>Universidad Católica San Pablo</strong> (UCSP) de Arequipa, Perú.</p>
+            <p>Me acompañan en este camino mis amigos <strong>Fabricio Bernardo Villanueva Valdivia</strong>, <strong>Jonathan Boris Tunquipa Ticuña</strong> y <strong>Yadhira Yurikho Coyuri Tirado</strong>.</p>
+            <p>Me apasionan las matemáticas y disfruto jugar videojuegos en mi tiempo libre.</p>
+        </section>
 
-    <section id="estudios">
-        <h2>Estudios y Cursos</h2>
-        <p>Actualmente, estoy cursando los siguientes cursos:</p>
-        <ul>
-            <li><strong>Matemática 1:</strong> Fundamentos matemáticos necesarios para el análisis en ingeniería.</li>
-            <li><strong>Química 1:</strong> Introducción a los principios químicos aplicados a la ingeniería.</li>
-            <li><strong>Metodología de la Investigación Científica:</strong> Métodos y técnicas de investigación en ingeniería.</li>
-            <li><strong>Economía General:</strong> Principios económicos y su aplicación en la industria.</li>
-            <li><strong>Introducción a la Filosofía:</strong> Reflexión crítica sobre conceptos fundamentales de la filosofía.</li>
-            <li><strong>Introducción a la Ciencia de la Computación:</strong> Conceptos básicos y fundamentos de programación.</li>
-        </ul>
-        <p>También colaboro y comparto experiencias con mis compañeros:</p>
-        <ul>
-            <li><a href="https://fabriciobernardovillanueva.github.io/githubpagetest/" target="_blank">Fabricio Bernardo Villanueva Valdivia</a></li>
-            <li><a href="https://jonathanboristunquipaticuna.github.io/JonathanBorisTunquipaTicu-a/" target="_blank">Jonathan Boris Tunquipa Ticuña</a></li>
-            <li><a href="https://gabrielmaurodriguez.github.io/gabrielmauriciorodriguezpe-a.github.io/" target="_blank">Yadhira Yurikho Coyuri Tirado</a></li>
-        </ul>
-    </section>
+        <section id="estudios">
+            <h2>Estudios y Cursos</h2>
+            <p>Actualmente, estoy cursando los siguientes cursos:</p>
+            <ul>
+                <li><strong>Matemática 1:</strong> Fundamentos matemáticos necesarios para el análisis en ingeniería.</li>
+                <li><strong>Química 1:</strong> Introducción a los principios químicos aplicados a la ingeniería.</li>
+                <li><strong>Metodología de la Investigación Científica:</strong> Métodos y técnicas de investigación en ingeniería.</li>
+                <li><strong>Economía General:</strong> Principios económicos y su aplicación en la industria.</li>
+                <li><strong>Introducción a la Filosofía:</strong> Reflexión crítica sobre conceptos fundamentales de la filosofía.</li>
+                <li><strong>Introducción a la Ciencia de la Computación:</strong> Conceptos básicos y fundamentos de programación.</li>
+            </ul>
+            <p>También colaboro y comparto experiencias con mis compañeros:</p>
+            <ul>
+                <li><a href="https://fabriciobernardovillanueva.github.io/githubpagetest/" target="_blank">Fabricio Bernardo Villanueva Valdivia</a></li>
+                <li><a href="https://jonathanboristunquipaticuna.github.io/JonathanBorisTunquipaTicu-a/" target="_blank">Jonathan Boris Tunquipa Ticuña</a></li>
+                <li><a href="https://yadhirayurikhocoyuritirado.github.io/yadhirayurikhocoyuri/" target="_blank">Yadhira Yurikho Coyuri Tirado</a></li>
+                 <li><a href="https://emerickcarlosteranbedregal.github.io/EmerickCarlosTeranBedregal/" target="_blank">Emerick Carlos Teran Bedregal</a></li>
+                 <li><a href="https://joaquinadrianolopezmolina.github.io/JoaquinAdrianoLopezMolina/" target="_blank">Joaquin Adriano Lopez Molina</a></li>
+                  <li><a href="https://rodrigorembrantsalasapaza.github.io/RodrigoRembrantSalasApaza/" target="_blank">Rodrigo Rembrant Salas Apaza</a></li>
+            </ul>
+        </section>
 
-    <section id="contacto">
-        <h2>Contacto</h2>
-        <p>Si deseas ponerte en contacto conmigo, no dudes en escribirme:</p>
-        <p>Email: <a href="mailto:gabriel.rodriguez.pena@ucsp.edu.pe">gabriel.rodriguez.pena@ucsp.edu.pe</a></p>
-    </section>
+        <section id="contacto">
+            <h2>Contacto</h2>
+            <p>Si deseas ponerte en contacto conmigo, no dudes en escribirme:</p>
+            <p>Email: <a href="mailto:gabriel.rodriguez.pena@ucsp.edu.pe">gabriel.rodriguez.pena@ucsp.edu.pe</a></p>
+        </section>
+    </main>
 
     <footer>
         <p>&copy; 2024 Gabriel Mauricio Rodríguez Peña</p>
